--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Header from 'components/Header.astro';
+
 export interface Props {
 	title: string;
 }
@@ -14,9 +16,19 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+
+		<!-- Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
 	</head>
 	<body>
-		<slot />
+		<Header />
+		<main class="w-3/4 mx-auto">
+			<div class="p-10 rounded-lg">
+				<slot />
+			</div>
+		</main>
 	</body>
 </html>
 <style is:global>
@@ -25,11 +37,34 @@ const { title } = Astro.props;
 		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
+		font-family: Poppins, sans-serif;
+		background-color: #03001C;
+		color: white;
 	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
+
+	* {
+		scroll-behavior: smooth;
+	}
+	
+</style>
+<style>
+	.gradimotion {
+		animation: animat 8s linear infinite;
+		--bg-size: 400%;
+		--color-one: theme(colors.blue.600);
+		--color-two: theme(colors.pink.600);
+		background: linear-gradient(
+                90deg,
+                var(--color-one),
+                var(--color-two),
+                var(--color-one)
+              ) 0 0 / var(--bg-size) 100%;
+		@apply p-1;
+	}
+
+	@keyframes animat {
+		to {
+			background-position: var(--bg-size) 0%;
+		}
 	}
 </style>
