add: light & dark mode

--- a/src/components/Featured.astro
+++ b/src/components/Featured.astro
@@ -1,21 +1,33 @@
 <div class="grid grid-cols-3 my-48 pt-16">
-  <div class="group bg-[#19122e] p-4 flex flex-col gap-2 -rotate-3 z-0 hover:z-10 -mx-10">
+  <div class="group bg-white dotted-border dark:border-none dark:bg-[#19122e] p-4 flex flex-col gap-2 -rotate-3 z-0 hover:z-10 -mx-10">
     <div class="w-full aspect-[2/3] overflow-y-hidden img-container">
-      <img class="w-full object-cover brightness-90 group-hover:brightness-100 transition-all" src="images/mau.png" alt="mau">
+      <img class="w-full object-cover brightness-100 group-hover:brightness-100 transition-all" src="images/mau.png" alt="mau">
     </div>
-    <h1 class="font-medium opacity-0 group-hover:opacity-100 bg-[#19122e] absolute bottom-0 w-full -mx-4 px-4 pt-4 pb-6 transition-opacity duration-200">M.A.U Collective</h1>
+    <h1 class="font-medium opacity-0 group-hover:opacity-100 bg-white dark:bg-[#19122e] absolute bottom-0 w-full -mx-4 px-4 pt-4 pb-6 transition-opacity duration-200">M.A.U Collective</h1>
   </div>
-  <div class="group bg-[#19122e] p-4 flex flex-col gap-2 rotate-3 z-0 hover:z-10 -translate-y-16 -mx-10">
+  <div class="group bg-white dotted-border dark:border-none dark:bg-[#19122e] p-4 flex flex-col gap-2 rotate-3 z-0 hover:z-10 -translate-y-16 -mx-10">
     <div class="w-full aspect-[2/3] overflow-y-hidden img-container">
-      <img class="w-full object-cover brightness-90 group-hover:brightness-100 transition-all" src="images/somom.png" alt="somom">
+      <img class="w-full object-cover brightness-100 group-hover:brightness-100 transition-all" src="images/somom.png" alt="somom">
     </div>
-    <h1 class="font-medium opacity-0 group-hover:opacity-100 bg-[#19122e] absolute bottom-0 w-full -mx-4 px-4 pt-4 pb-6 transition-opacity duration-200">Somom's Web Profile</h1>
+    <h1 class="font-medium opacity-0 group-hover:opacity-100 bg-white dark:bg-[#19122e] absolute bottom-0 w-full -mx-4 px-4 pt-4 pb-6 transition-opacity duration-200">Somom's Web Profile</h1>
+    <!-- Small Card -->
+    <!-- <div class="group absolute -left-28 flex flex-col gap-4">
+      <div class="bg-[#19122e] rounded-md p-4 w-24 h-24">
+        <img src="https://cdn.cdnlogo.com/logos/n/80/next-js.svg" alt="nextjs">
+      </div>
+      <div class="bg-[#19122e] rounded-md p-4 w-24 h-24">
+        <img src="https://cdn.cdnlogo.com/logos/n/80/next-js.svg" alt="nextjs">
+      </div>
+      <div class="bg-[#19122e] rounded-md p-4 w-24 h-24">
+        <img src="https://cdn.cdnlogo.com/logos/n/80/next-js.svg" alt="nextjs">
+      </div>
+    </div> -->
   </div>
-  <div class="group bg-[#19122e] p-4 flex flex-col gap-2 -rotate-3 z-0 hover:z-10 -mx-10">
+  <div class="group bg-white dotted-border dark:border-none dark:bg-[#19122e] p-4 flex flex-col gap-2 -rotate-3 z-0 hover:z-10 -mx-10">
     <div class="w-full aspect-[2/3] overflow-y-hidden img-container">
-      <img class="w-full object-cover brightness-90 group-hover:brightness-100 transition-all" src="images/suboimusic.png" alt="suboi music">
+      <img class="w-full object-cover brightness-100 group-hover:brightness-100 transition-all" src="images/suboimusic.png" alt="suboi music">
     </div>
-    <h1 class="font-medium opacity-0 group-hover:opacity-100 bg-[#19122e] absolute bottom-0 w-full -mx-4 px-4 pt-4 pb-6 transition-opacity duration-200">Suboi Music</h1>
+    <h1 class="font-medium opacity-0 group-hover:opacity-100 bg-white dark:bg-[#19122e] absolute bottom-0 w-full -mx-4 px-4 pt-4 pb-6 transition-opacity duration-200">Suboi Music</h1>
   </div>
 </div>
 
