--- a/src/components/Jumbotron.astro
+++ b/src/components/Jumbotron.astro
@@ -1,9 +1,11 @@
 <div class="flex flex-col justify-center items-center my-32 space-y-12">
   <h1 class="font-medium text-4xl tracking-wide flex flex-col items-center">
-    <span class="bg-[#19122e] block p-6 w-fit mb-8 rounded-md">
+    <span class="font-semibold bg-yellow-300 dark:bg-[#19122e] block p-6 w-fit mb-8 rounded-md">
       Hey, I'm Difa
     </span>
-    <span>a <span class="font-semibold bg-clip-text text-transparent bg-gradient-to-br from-pink-400 to-blue-700">web developer</span> with</span>
+    <span>a<span class="font-semibold mx-3 bg-clip-text text-transparent bg-gradient-to-br
+                        from-yellow-500 via-yellow-600 to-pink-500
+                        dark:from-indigo-500 dark:via-purple-500 dark:to-pink-500">web developer</span>with</span>
   </h1>
   <p class="text-center w-3/4">
     Experience on make a simple, futuristic, clean, illustrated, and high-quality websites.
