--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -41,7 +41,9 @@
   }
 
   function toggleTheme() {
-    if (localStorage.getItem('theme') === 'light') {
+    if (localStorage.getItem('theme') === 'light' ||
+        !localStorage.getItem('theme')
+    ) {
       document.documentElement.classList.add('dark')
       localStorage.setItem('theme', 'dark')
       console.log('dark mode');
