change: remove link & add autoscroll

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,11 +17,8 @@
       <li class={path === '/' ? currentPath : ''}>
         <a href="/">Home</a>
       </li>
-      <li class={path === '/blog' ? currentPath : ''}>
-        <a href="/blog">Blog</a>
-      </li>
       <li class={path === '/contact' ? currentPath : ''}>
-        <a href="/contact">Contact</a>
+        <a href="#catch-me">Contact</a>
       </li>
       <li class="flex items-center">
         <label class="relative inline-flex items-center cursor-pointer">
