add: section contact

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Layout from 'layouts/Layout.astro';
 import Jumbotron from 'components/Jumbotron.astro';
 import Featured from 'components/Featured.astro';
+import CatchMe from 'components/CatchMe.astro';
 ---
 
 <Layout title="by difaananda.">
 	<Jumbotron />
 	<Featured />
+	<CatchMe />
 </Layout>
