--- a/src/components/CatchMe.astro
+++ b/src/components/CatchMe.astro
@@ -30,15 +30,15 @@
 <div id="catch-me" class="flex flex-row justify-between">
   <div class="py-32 space-y-8 flex flex-col">
     <h2 class="text-black text-6xl font-bold dark:text-white">Get in touch.</h2>
-    <p class="text-xl text-black dark:text-gray-300">I'd like to explore anytime anywhere, but when you have some project, maybe that'll be my next destination.</p>
+    <p class="text-xl text-gray-700 dark:text-gray-300">I'd like to explore anytime anywhere, but when you have some project, maybe that'll be my next destination.</p>
     <div class="flex flex-col space-y-2">
       <div class="flex flex-row space-x-4 items-center">
         <img src="icons/whatsapp.svg" alt="wa icon" class="w-6">
-        <p class="text-lg">+62 831 5394 1808</p>
+        <p class="text-lg text-gray-700">+62 831 5394 1808</p>
       </div>
       <div class="flex flex-row space-x-4 items-center">
         <img src="icons/mail.svg" alt="mail icon" class="w-6">
-        <p class="text-lg">difacool40@gmail.com</p>
+        <p class="text-lg text-gray-700">difacool40@gmail.com</p>
       </div>
     </div>
     <a href="mailto:difacool40@gmail.com" class="w-fit px-8 py-4 bg-yellow-300 dark:bg-[#19122e] text-lg font-medium hover:brightness-105 dark:hover:brightness-110">Catch me</a>
