--- a/src/components/CatchMe.astro
+++ b/src/components/CatchMe.astro
@@ -34,11 +34,11 @@
     <div class="flex flex-col space-y-2">
       <div class="flex flex-row space-x-4 items-center">
         <img src="icons/whatsapp.svg" alt="wa icon" class="w-6">
-        <p class="text-lg text-gray-700">+62 831 5394 1808</p>
+        <p class="text-lg text-gray-700 dark:text-gray-300">+62 831 5394 1808</p>
       </div>
       <div class="flex flex-row space-x-4 items-center">
         <img src="icons/mail.svg" alt="mail icon" class="w-6">
-        <p class="text-lg text-gray-700">difacool40@gmail.com</p>
+        <p class="text-lg text-gray-700 dark:text-gray-300">difacool40@gmail.com</p>
       </div>
     </div>
     <a href="mailto:difacool40@gmail.com" class="w-fit px-8 py-4 bg-yellow-300 dark:bg-[#19122e] text-lg font-medium hover:brightness-105 dark:hover:brightness-110">Catch me</a>
