--- a/src/components/CatchMe.astro
+++ b/src/components/CatchMe.astro
@@ -27,8 +27,8 @@
   }
 </style>
 
-<div id="catch-me" class="flex flex-row justify-between">
-  <div class="py-32 space-y-8 flex flex-col">
+<div id="catch-me" class="flex flex-col lg:flex-row justify-between items-center">
+  <div class="py-16 2xl:py-32 space-y-8 flex flex-col w-full lg:w-1/2">
     <h2 class="text-black text-6xl font-bold dark:text-white">Get in touch.</h2>
     <p class="text-xl text-gray-700 dark:text-gray-300">I'd like to explore anytime anywhere, but when you have some project, maybe that'll be my next destination.</p>
     <div class="flex flex-col space-y-2">
@@ -44,8 +44,8 @@
     <a href="mailto:difacool40@gmail.com" class="w-fit px-8 py-4 bg-yellow-300 dark:bg-[#19122e] text-lg font-medium hover:brightness-105 dark:hover:brightness-110">Catch me</a>
   </div>
   <div class="relative w-fit h-fit">
-    <lottie-player class="" src="lotties/windy-environment.json"  background="transparent"  speed="1"  style="width: 800px; height: 800px;"  loop  autoplay></lottie-player>
-    <lottie-player class="absolute bottom-10 vespa-motion" src="lotties/happy-delivery.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+    <lottie-player class="w-full h-full" src="lotties/windy-environment.json"  background="transparent"  speed="1"  loop  autoplay></lottie-player>
+    <lottie-player class="absolute vespa-motions bottom-5 w-44 h-44 sm:w-64 sm:h-64 xl:w-80 xl:h-80" src="lotties/happy-delivery.json"  background="transparent"  speed="1"  loop  autoplay></lottie-player>
   </div>
 </div>
 
