--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { title } = Astro.props;
 							 dark:bg-[#03001C] dark:text-white
 	">
 		<Header />
-		<main class="w-3/4 mx-auto">
+		<main class="w-full md:w-3/4 mx-auto">
 			<div class="p-10 rounded-lg">
 				<slot />
 			</div>
