change: fix spacing

--- a/src/components/Jumbotron.astro
+++ b/src/components/Jumbotron.astro
@@ -3,7 +3,7 @@
     <span class="font-semibold bg-yellow-300 dark:bg-[#19122e] block p-6 w-fit mb-8 rounded-md">
       Hey, I'm Difa
     </span>
-    <span class="flex flex-col items-center space-y-2 md:flex-row">
+    <span class="flex flex-col items-center justify-center space-y-2 md:space-y-0 md:flex-row">
       <span>a</span>
       <span class="font-semibold mx-3 bg-clip-text text-transparent bg-gradient-to-br
                     from-yellow-500 via-yellow-600 to-pink-500
