--- a/src/components/CatchMe.astro
+++ b/src/components/CatchMe.astro
@@ -1,32 +1,3 @@
-<style>
-  .vespa-motion {
-    animation-name: vespa-animation;
-    animation-duration: 2.5s;
-    animation-iteration-count: infinite;
-    animation-timing-function: cubic-bezier(.17,.67,.85,.55);
-  }
-
-  @keyframes vespa-animation {
-    0% {
-      transform: translateX(0);
-      opacity: 0;
-    }
-    25% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 1;
-    }
-    90% {
-      opacity: 1;
-    }
-    100% {
-      transform: translateX(180%);
-      opacity: 0;
-    }
-  }
-</style>
-
 <div id="catch-me" class="flex flex-col lg:flex-row justify-between items-center">
   <div class="py-16 2xl:py-32 space-y-8 flex flex-col w-full lg:w-1/2">
     <h2 class="text-black text-6xl font-bold dark:text-white">Get in touch.</h2>
@@ -44,7 +15,7 @@
     <a href="mailto:difacool40@gmail.com" class="w-fit px-8 py-4 bg-yellow-300 dark:bg-[#19122e] text-lg font-medium hover:brightness-105 dark:hover:brightness-110">Catch me</a>
   </div>
   <div class="relative w-fit h-fit">
-    <lottie-player class="w-full h-full" src="lotties/windy-environment.json"  background="transparent"  speed="1"  loop  autoplay></lottie-player>
-    <lottie-player class="absolute vespa-motions bottom-5 w-44 h-44 sm:w-64 sm:h-64 xl:w-80 xl:h-80" src="lotties/happy-delivery.json"  background="transparent"  speed="1"  loop  autoplay></lottie-player>
+    <dotlottie-player class="w-full h-full" src="lotties/windy-environment.lottie"  background="transparent"  speed="1"  loop  autoplay></dotlottie-player>
+    <dotlottie-player class="absolute bottom-5 w-44 h-44 sm:w-64 sm:h-64 xl:w-80 xl:h-80" src="lotties/vespa.lottie"  background="transparent"  speed="1"  loop  autoplay></dotlottie-player>
   </div>
 </div>
