--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -59,4 +59,4 @@ const { title } = Astro.props;
 	
 </style>
 <style></style>
-<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<script src="https://unpkg.com/@dotlottie/player-component@1.0.0/dist/dotlottie-player.js"></script>
