--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,8 +26,8 @@ const { title } = Astro.props;
 							 dark:bg-[#03001C] dark:text-white
 	">
 	  <!-- Bulb -->
-		<object id="bulb-off" data="images/bulb-off.svg" type="image/svg+xml" class="absolute w-64 h-64" style="display: none;"></object>
-		<object id="bulb-on" data="images/bulb-on.svg" type="image/svg+xml" class="absolute w-64 h-64" style="display: none;"></object>
+		<object id="bulb-off" data="images/bulb-off.svg" type="image/svg+xml" class="absolute w-64 h-64" style="opacity: 0;"></object>
+		<object id="bulb-on" data="images/bulb-on.svg" type="image/svg+xml" class="absolute w-64 h-64" style="opacity: 0;"></object>
 		<Header />
 		<main class="w-full md:w-3/4 mx-auto">
 			<div class="p-10 rounded-lg">
