--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,8 +26,13 @@ const { title } = Astro.props;
 							 dark:bg-[#03001C] dark:text-white
 	">
 	  <!-- Bulb -->
-		<object id="bulb-off" data="images/bulb-off.svg" type="image/svg+xml" class="absolute w-64 h-64" style="opacity: 0;"></object>
-		<object id="bulb-on" data="images/bulb-on.svg" type="image/svg+xml" class="absolute w-64 h-64" style="opacity: 0;"></object>
+		<div id="bulb" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64 flex -top-5 -left-10 sm:left-0 sm:top-0">
+			<object id="bulb-off" data="images/bulb-off.svg" type="image/svg+xml" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64" style="opacity: 0;"></object>
+			<object id="bulb-on" data="images/bulb-on.svg" type="image/svg+xml" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64" style="opacity: 0;"></object>
+			<div class="w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64 flex items-center justify-center pt-6">
+				<svg id="bulb-toggler" class="w-14 h-14 rounded-full cursor-pointer z-50"></svg>
+			</div>
+		</div>
 		<Header />
 		<main class="w-full md:w-3/4 mx-auto">
 			<div class="p-10 rounded-lg">
