--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,11 +26,11 @@ const { title } = Astro.props;
 							 dark:bg-[#03001C] dark:text-white
 	">
 	  <!-- Bulb -->
-		<div id="bulb" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64 flex -top-5 -left-10 sm:left-0 sm:top-0">
+		<div id="bulb" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64 flex -top-5 -left-10 lg:left-0 sm:top-0">
 			<object id="bulb-off" data="images/bulb-off.svg" type="image/svg+xml" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64" style="opacity: 0;"></object>
 			<object id="bulb-on" data="images/bulb-on.svg" type="image/svg+xml" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64" style="opacity: 0;"></object>
 			<div class="w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64 flex items-center justify-center pt-6">
-				<svg id="bulb-toggler" class="w-14 h-14 rounded-full cursor-pointer z-50"></svg>
+				<svg id="bulb-toggler" class="w-14 h-14 rounded-full sm:cursor-pointer z-50"></svg>
 			</div>
 		</div>
 		<Header />
