change: remove icon

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 <footer class="mt-32">
-  <p class="flex flex-row items-center text-lg font-medium">
+  <p class="flex flex-row items-center text-lg">
     Made with
-    <img src="icons/love.svg" alt="love" class="w-4 h-4 mx-1">
+    <span class="mx-1 font-semibold text-red-500 dark:text-blue-500">Astro</span>
     by difaananda.
   </p>
 </footer>
