--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,8 +29,9 @@ const { title } = Astro.props;
 		<div id="bulb" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64 flex -top-5 -left-10 lg:left-0 sm:top-0">
 			<object id="bulb-off" data="images/bulb-off.svg" type="image/svg+xml" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64" style="opacity: 0;"></object>
 			<object id="bulb-on" data="images/bulb-on.svg" type="image/svg+xml" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64" style="opacity: 0;"></object>
-			<div class="w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64 flex items-center justify-center pt-6">
-				<svg id="bulb-toggler" class="w-14 h-14 rounded-full sm:cursor-pointer z-50"></svg>
+			<div class="w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64 flex items-center justify-center pt-6 relative">
+				<svg id="bulb-toggler" class="w-14 h-14 rounded-full sm:cursor-pointer z-50 relative"></svg>
+				<p class="absolute mt-24 ml-24">toggle theme</p>
 			</div>
 		</div>
 		<Header />
@@ -64,4 +65,15 @@ const { title } = Astro.props;
 	
 </style>
 <style></style>
+
 <script src="https://unpkg.com/@dotlottie/player-component@1.0.0/dist/dotlottie-player.js"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6RLXF519CB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6RLXF519CB');
+</script>
