add: type for partytown

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,8 +26,8 @@ const { title } = Astro.props;
 		<script src="https://unpkg.com/@dotlottie/player-component@1.0.0/dist/dotlottie-player.js"></script>
 
 		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-6RLXF519CB"></script>
-		<script>
+		<script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-6RLXF519CB"></script>
+		<script type="text/partytown">
 			window.dataLayer = window.dataLayer || [];
 			function gtag(){dataLayer.push(arguments);}
 			gtag('js', new Date());
