--- a/src/components/CatchMe.astro
+++ b/src/components/CatchMe.astro
@@ -4,15 +4,15 @@
     <p class="text-xl text-gray-700 dark:text-gray-300">I'd like to explore anytime anywhere, but when you have some project, maybe that'll be my next destination.</p>
     <div class="flex flex-col space-y-2">
       <div class="flex flex-row space-x-4 items-center">
-        <img src="icons/whatsapp.svg" alt="wa icon" class="w-6">
-        <p class="text-lg text-gray-700 dark:text-gray-300">+62 831 5394 1808</p>
+        <img src="icons/upwork.svg" alt="upwork icon" class="w-6">
+        <a class="text-lg text-gray-700 dark:text-gray-300 underline" target="_blank" href="https://www.upwork.com/freelancers/~0175407f2d9132f772">Upwork Profile</a>
       </div>
       <div class="flex flex-row space-x-4 items-center">
         <img src="icons/mail.svg" alt="mail icon" class="w-6">
-        <p class="text-lg text-gray-700 dark:text-gray-300">difacool40@gmail.com</p>
+        <a class="text-lg text-gray-700 dark:text-gray-300 underline" href="mailto:difacool40@gmail.com">difaananda420@gmail.com</a>
       </div>
     </div>
-    <a href="mailto:difacool40@gmail.com" class="w-fit px-8 py-4 bg-yellow-300 dark:bg-[#19122e] text-lg font-medium hover:brightness-105 dark:hover:brightness-110">Catch me</a>
+    <a href="mailto:difacool40@gmail.com" class="w-fit px-8 py-4 bg-yellow-300 dark:bg-[#19122e] text-lg font-medium hover:brightness-95 dark:hover:brightness-110 transition-all">Catch me</a>
   </div>
   <div class="relative w-fit h-fit">
     <dotlottie-player class="w-full h-full" src="lotties/windy-environment.lottie"  background="transparent"  speed="1"  loop  autoplay></dotlottie-player>
