--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,7 +44,7 @@ const { title } = Astro.props;
 			<object id="bulb-on" data="images/bulb-on.svg" type="image/svg+xml" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64" style="opacity: 0;"></object>
 			<div class="w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64 flex items-center justify-center pt-6 relative">
 				<svg id="bulb-toggler" class="w-14 h-14 rounded-full sm:cursor-pointer z-50 relative"></svg>
-				<p id="bulb-toggler-text" class="absolute mt-20 ml-20 text-xs text-gray-600 dark:text-gray-300">toggle</p>
+				<p id="bulb-toggler-text" class="absolute mt-20 ml-20 text-xs text-gray-600 dark:text-gray-300"></p>
 			</div>
 		</div>
 		<Header />
