--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,6 +38,8 @@ const { title } = Astro.props;
 	<body class="bg-lime-50 text-black
 							 dark:bg-[#03001C] dark:text-white
 	">
+		<!-- Custom Cursor -->
+		<div id="cursor"></div>
 	  <!-- Bulb -->
 		<div id="bulb" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64 flex -top-5 -left-10 lg:left-0 sm:top-0">
 			<object id="bulb-off" data="images/bulb-off.svg" type="image/svg+xml" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64" style="opacity: 0;"></object>
@@ -76,5 +78,46 @@ const { title } = Astro.props;
 		border-image-repeat: round;
 	}
 	
+	#cursor {
+		width: 65px;
+		height: 65px;
+		position: fixed;
+		top: 0;
+		left: 0;
+		background-color: #fff;
+		border-radius: 50%;
+		mix-blend-mode: difference;
+		z-index: 100;
+		pointer-events: none;
+	}
 </style>
-<style></style>
+
+<script>
+	import gsap from 'gsap'
+
+	const cursor = document.getElementById("cursor");
+
+	gsap.set(cursor, {xPercent: -50, yPercent: -50});
+
+	const pos = { x: window.innerWidth / 2, y: window.innerHeight / 2 };
+	const mouse = { x: pos.x, y: pos.y };
+	const speed = 0.35;
+
+	const xSet = gsap.quickSetter(cursor, "x", "px");
+	const ySet = gsap.quickSetter(cursor, "y", "px");
+
+	window.addEventListener("mousemove", e => {    
+		mouse.x = e.x;
+		mouse.y = e.y; 
+	});
+
+	gsap.ticker.add(() => {
+		// adjust speed for higher refresh monitors
+		const dt = 1.0 - Math.pow(1.0 - speed, gsap.ticker.deltaRatio()); 
+		
+		pos.x += (mouse.x - pos.x) * dt;
+		pos.y += (mouse.y - pos.y) * dt;
+		xSet(pos.x);
+		ySet(pos.y);
+	});
+</script>
