--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -94,30 +94,38 @@ const { title } = Astro.props;
 
 <script>
 	import gsap from 'gsap'
+	
+	function hasTouchSupport() {
+		return 'ontouchstart' in window || navigator.maxTouchPoints > 0;
+	}
 
-	const cursor = document.getElementById("cursor");
+	if(hasTouchSupport()) {
+		document.getElementById("cursor")?.remove();
+	}
+	else {
+		const cursor = document.getElementById("cursor");
+		gsap.set(cursor, {xPercent: -50, yPercent: -50});
 
-	gsap.set(cursor, {xPercent: -50, yPercent: -50});
+		const pos = { x: window.innerWidth / 2, y: window.innerHeight / 2 };
+		const mouse = { x: pos.x, y: pos.y };
+		const speed = 0.35;
 
-	const pos = { x: window.innerWidth / 2, y: window.innerHeight / 2 };
-	const mouse = { x: pos.x, y: pos.y };
-	const speed = 0.35;
+		const xSet = gsap.quickSetter(cursor, "x", "px");
+		const ySet = gsap.quickSetter(cursor, "y", "px");
 
-	const xSet = gsap.quickSetter(cursor, "x", "px");
-	const ySet = gsap.quickSetter(cursor, "y", "px");
+		window.addEventListener("mousemove", e => {    
+			mouse.x = e.x;
+			mouse.y = e.y; 
+		});
 
-	window.addEventListener("mousemove", e => {    
-		mouse.x = e.x;
-		mouse.y = e.y; 
-	});
-
-	gsap.ticker.add(() => {
-		// adjust speed for higher refresh monitors
-		const dt = 1.0 - Math.pow(1.0 - speed, gsap.ticker.deltaRatio()); 
-		
-		pos.x += (mouse.x - pos.x) * dt;
-		pos.y += (mouse.y - pos.y) * dt;
-		xSet(pos.x);
-		ySet(pos.y);
-	});
+		gsap.ticker.add(() => {
+			// adjust speed for higher refresh monitors
+			const dt = 1.0 - Math.pow(1.0 - speed, gsap.ticker.deltaRatio()); 
+			
+			pos.x += (mouse.x - pos.x) * dt;
+			pos.y += (mouse.y - pos.y) * dt;
+			xSet(pos.x);
+			ySet(pos.y);
+		});
+	}
 </script>
