--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,16 @@
 <header class="mx-auto flex flex-col p-8 space-y-4 items-center
                md:w-3/4 md:flex-row md:py-10 md:space-y-0 md:justify-between"
 >
+  <!-- Bulb -->
+  <div id="bulb" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64 flex -top-5 -left-10 lg:left-0 sm:top-0">
+    <object id="bulb-off" data="images/bulb-off.svg" type="image/svg+xml" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64" style="opacity: 0;"></object>
+    <object id="bulb-on" data="images/bulb-on.svg" type="image/svg+xml" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64" style="opacity: 0;"></object>
+    <div class="w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64 flex items-center justify-center pt-6 relative">
+      <svg id="bulb-toggler" class="w-14 h-14 rounded-full sm:cursor-pointer z-50 relative"></svg>
+      <p id="bulb-toggler-text" class="hidden sm:block absolute mt-20 ml-14 text-xs text-gray-600 dark:text-gray-300 -rotate-12"></p>
+    </div>
+  </div>
+
   <p class="text-xl font-bold">
     <span class="text-red-500 dark:text-blue-500 mr-1">by</span>  
     difaananda.
@@ -45,11 +55,11 @@
       document.documentElement.classList.add('dark')
       themeSwitcher.checked = true;
       bulbOn.style.opacity = '1';
-      if(!hasTouchSupport) bulbTogglerText.innerHTML = 'turn on';
+      bulbTogglerText.innerHTML = 'turn on';
     }
     else {
       bulbOff.style.opacity = '1';
-      if(!hasTouchSupport) bulbTogglerText.innerHTML = 'turn off';
+      bulbTogglerText.innerHTML = 'turn off';
     }
 
     function toggleTheme() {
@@ -61,14 +71,14 @@
         bulbOff.style.opacity = '0';
         bulbOn.style.opacity = '1';
         themeSwitcher.checked = true;
-        if(!hasTouchSupport) bulbTogglerText.innerHTML = 'turn on';
+        bulbTogglerText.innerHTML = 'turn on';
       } else {
         document.documentElement.classList.remove('dark')
         localStorage.setItem('theme', 'light')
         bulbOff.style.opacity = '1';
         bulbOn.style.opacity = '0';
         themeSwitcher.checked = false;
-        if(!hasTouchSupport) bulbTogglerText.innerHTML = 'turn off';
+        bulbTogglerText.innerHTML = 'turn off';
       }
     }
 
