--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,20 +22,6 @@
     <span class="text-red-500 dark:text-blue-500 mr-1">by</span>  
     difaananda.
   </p>
-  <ul class="flex flex-row space-x-8 text-lg">
-    <li class={path === '/' ? currentPath : ''}>
-      <a href="/">Home</a>
-    </li>
-    <li class={path === '/contact' ? currentPath : ''}>
-      <a href="#catch-me">Contact</a>
-    </li>
-    <li class="flex items-center">
-      <label class="relative inline-flex items-center cursor-pointer">
-        <input id="theme-switcher" type="checkbox" value="" class="sr-only peer">
-        <div class="w-11 h-6 bg-yellow-300 rounded-full peer peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
-      </label>
-    </li>
-  </ul>
 </header>
 
 <script>
@@ -47,13 +33,13 @@
     // Bulb
     const bulbOff = document.getElementById('bulb-off') as HTMLObjectElement;
     const bulbOn = document.getElementById('bulb-on') as HTMLObjectElement;
-    const themeSwitcher = document.getElementById('theme-switcher') as HTMLInputElement;
+    // const themeSwitcher = document.getElementById('theme-switcher') as HTMLInputElement;
     const bulbToggler = document.getElementById('bulb-toggler') as HTMLElement;
     const bulbTogglerText = document.getElementById('bulb-toggler-text') as HTMLElement;
 
     if (localStorage.getItem('theme') === 'dark') {
       document.documentElement.classList.add('dark')
-      themeSwitcher.checked = true;
+      // themeSwitcher.checked = true;
       bulbOn.style.opacity = '1';
       bulbTogglerText.innerHTML = 'turn on';
     }
@@ -70,19 +56,19 @@
         localStorage.setItem('theme', 'dark')
         bulbOff.style.opacity = '0';
         bulbOn.style.opacity = '1';
-        themeSwitcher.checked = true;
+        // themeSwitcher.checked = true;
         bulbTogglerText.innerHTML = 'turn on';
       } else {
         document.documentElement.classList.remove('dark')
         localStorage.setItem('theme', 'light')
         bulbOff.style.opacity = '1';
         bulbOn.style.opacity = '0';
-        themeSwitcher.checked = false;
+        // themeSwitcher.checked = false;
         bulbTogglerText.innerHTML = 'turn off';
       }
     }
 
-    themeSwitcher.addEventListener('click', toggleTheme);
+    // themeSwitcher.addEventListener('click', toggleTheme);
     bulbToggler.addEventListener('click', toggleTheme);
   }
 </script>
