feat: update text

--- a/src/components/Jumbotron.astro
+++ b/src/components/Jumbotron.astro
@@ -9,10 +9,10 @@
                     from-yellow-500 via-yellow-600 to-pink-500
                     dark:from-indigo-500 dark:via-purple-500 dark:to-pink-500
                     whitespace-nowrap">web developer</span>
-      <span>with</span>
+      <span>who</span>
     </span>
   </h1>
-  <p class="text-center w-full md:w-3/4">
-    Experience on make a simple, futuristic, clean, illustrated, and high-quality websites.
+  <p class="text-center w-full md:w-3/4 text-xl">
+    crafts sleek, high-quality websites with a futuristic edge. I specialize in minimalist designs that combine advanced technology with seamless usability. From smooth animations to optimized performance, I turn complex ideas into simple, engaging user experiences.
   </p>
 </div>
