--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,8 +10,8 @@
 >
   <!-- Bulb -->
   <div id="bulb" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64 flex -top-5 -left-10 lg:left-0 sm:top-0">
-    <object id="bulb-off" data="images/bulb-off.svg" type="image/svg+xml" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64" style="opacity: 0;"></object>
-    <object id="bulb-on" data="images/bulb-on.svg" type="image/svg+xml" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64" style="opacity: 0;"></object>
+    <object id="bulb-off" data="/images/bulb-off.svg" type="image/svg+xml" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64" style="opacity: 0;"></object>
+    <object id="bulb-on" data="/images/bulb-on.svg" type="image/svg+xml" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64" style="opacity: 0;"></object>
     <div class="w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64 flex items-center justify-center pt-6 relative">
       <svg id="bulb-toggler" class="w-14 h-14 rounded-full sm:cursor-pointer z-50 relative"></svg>
       <p id="bulb-toggler-text" class="hidden sm:block absolute mt-20 ml-14 text-xs text-gray-600 dark:text-gray-300 -rotate-12"></p>
@@ -22,6 +22,15 @@
     <span class="text-red-500 dark:text-blue-500 mr-1">by</span>  
     difaananda.
   </p>
+
+  <ul class="flex flex-row space-x-8 text-lg">
+    <li class={path === '/' ? currentPath : ''}>
+      <a href="/">Home</a>
+    </li>
+    <li class={path.includes('/projects') ? currentPath : ''}>
+      <a href="/projects">Projects</a>
+    </li>
+  </ul>
 </header>
 
 <script>
@@ -33,13 +42,10 @@
     // Bulb
     const bulbOff = document.getElementById('bulb-off') as HTMLObjectElement;
     const bulbOn = document.getElementById('bulb-on') as HTMLObjectElement;
-    // const themeSwitcher = document.getElementById('theme-switcher') as HTMLInputElement;
     const bulbToggler = document.getElementById('bulb-toggler') as HTMLElement;
     const bulbTogglerText = document.getElementById('bulb-toggler-text') as HTMLElement;
 
-    if (localStorage.getItem('theme') === 'dark') {
-      document.documentElement.classList.add('dark')
-      // themeSwitcher.checked = true;
+    if (localStorage.theme === 'dark') {
       bulbOn.style.opacity = '1';
       bulbTogglerText.innerHTML = 'turn on';
     }
@@ -49,26 +55,23 @@
     }
 
     function toggleTheme() {
-      if (localStorage.getItem('theme') === 'light' ||
-          !localStorage.getItem('theme')
+      if (localStorage.theme === 'light' ||
+          !localStorage.theme
       ) {
         document.documentElement.classList.add('dark')
         localStorage.setItem('theme', 'dark')
         bulbOff.style.opacity = '0';
         bulbOn.style.opacity = '1';
-        // themeSwitcher.checked = true;
         bulbTogglerText.innerHTML = 'turn on';
       } else {
         document.documentElement.classList.remove('dark')
         localStorage.setItem('theme', 'light')
         bulbOff.style.opacity = '1';
         bulbOn.style.opacity = '0';
-        // themeSwitcher.checked = false;
         bulbTogglerText.innerHTML = 'turn off';
       }
     }
 
-    // themeSwitcher.addEventListener('click', toggleTheme);
     bulbToggler.addEventListener('click', toggleTheme);
   }
 </script>
