--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,6 +34,16 @@ const { title } = Astro.props;
 
 			gtag('config', 'G-6RLXF519CB');
 		</script>
+
+		<!-- Theme -->
+		<script is:inline>
+			;(function initTheme() {
+				const theme = localStorage.getItem('theme') || 'light'
+				if (theme === 'dark') {
+					document.documentElement.classList.add('dark')
+				}
+			})()
+		</script>
 	</head>
 	<body class="bg-lime-50 text-black
 							 dark:bg-[#03001C] dark:text-white
