--- a/src/components/CatchMe.astro
+++ b/src/components/CatchMe.astro
@@ -1,4 +1,4 @@
-<div id="catch-me" class="flex flex-col lg:flex-row justify-between items-center">
+<div id="catch-me" class="flex flex-col lg:flex-row justify-between items-center overflow-x-hidden">
   <div class="py-16 2xl:py-32 space-y-8 flex flex-col w-full lg:w-1/2">
     <h2 class="text-black text-6xl font-bold dark:text-white">Get in touch.</h2>
     <p class="text-xl text-gray-700 dark:text-gray-300">I'd like to explore anytime anywhere, but when you have some project, maybe that'll be my next destination.</p>
