--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -7,9 +7,11 @@ const projects = await getCollection("projects");
 ---
 
 <Layout title="by difaananda.">
-	<div class="flex flex-col justify-center items-center my-32 space-y-12">
-		<h1 class="font-bold text-7xl tracking-wide flex flex-col items-center justify-center dark:text-yellow-400">
-			My recent works
+	<div class="flex flex-col justify-center xs:items-center my-20">
+		<h1 class="w-full font-bold text-6xl xs:text-7xl tracking-wide flex flex-row flex-wrap sm:justify-center gap-y-2 gap-x-4">
+			<span>My</span>
+			<span class="gradient-text">recent</span>
+			<span>works</span>
 		</h1>
 	</div>
 	<Works projects={projects} />
