fix: change title behavior

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import CatchMe from 'components/CatchMe.astro';
 import Footer from 'components/Footer.astro';
 ---
 
-<Layout title="by difaananda.">
+<Layout>
 	<Jumbotron />
 	<Featured />
 	<CatchMe />
