--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -6,7 +6,7 @@ import { getCollection } from "astro:content";
 const projects = await getCollection("projects");
 ---
 
-<Layout title="by difaananda.">
+<Layout title="projects">
 	<div class="flex flex-col justify-center xs:items-center my-20">
 		<h1 class="w-full font-bold text-6xl xs:text-7xl tracking-wide flex flex-row flex-wrap sm:justify-center gap-y-2 gap-x-4">
 			<span>My</span>
