--- a/src/components/CatchMe.astro
+++ b/src/components/CatchMe.astro
@@ -16,7 +16,7 @@ import Button from 'components/common/Button.astro';
         <a class="text-lg text-gray-700 dark:text-gray-300 underline" target="_blank" href="https://www.upwork.com/freelancers/~0175407f2d9132f772">Upwork Profile</a>
       </div>
     </div>
-    <Button href="mailto:difaananda420@gmail.com" classes="mt-10" href="/projects">Cath me</Button>
+    <Button href="mailto:difaananda420@gmail.com" classes="mt-10" href="/projects">Catch me</Button>
   </div>
   <div class="relative w-fit h-fit">
     <dotlottie-player class="w-full h-full" src="lotties/windy-environment.lottie"  background="transparent"  speed="1"  loop  autoplay></dotlottie-player>
