--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,7 +1,9 @@
 ---
 const { frontmatter } = Astro.props;
 ---
-<div>
-  <h1>{frontmatter.title}</h1>
-  <slot />
+<div class="flex flex-col gap-20">
+  <h1 class="font-bold text-5xl">{frontmatter.title}</h1>
+  <article class="prose lg:prose-xl dark:prose-invert">
+    <slot />
+  </article>
 </div>
