--- a/src/components/common/Button.astro
+++ b/src/components/common/Button.astro
@@ -47,16 +47,20 @@ const allClass = clsx('button', buttonVariantClasses[variant], buttonAlignClasse
     @apply relative flex w-full justify-center rounded-[20px]  px-6 py-3 font-medium uppercase transition-colors;
   }
 
-  .button__border {
-    @apply border border-b-[3px] border-r-[3px] border-black;
-  }
-
   .button-primary {
     @apply bg-yellow-300 text-black hover:bg-black hover:text-white;
   }
 
+  .button__border {
+    @apply border border-b-[3px] border-r-[3px] border-black;
+  }
+
   :global(.dark) .button-primary{
     @apply bg-[#19122e] text-white hover:bg-yellow-300 hover:text-black;
+  }
+
+  :global(.dark) .button__border {
+    @apply border border-b-[3px] border-r-[3px] border-gray-200 hover:border-yellow-300;
   }
 
   .button-dark {
