fix: move header

--- a/src/components/common/Header.astro
+++ b/src/components/common/Header.astro
@@ -18,10 +18,10 @@
     </div>
   </div>
 
-  <p class="text-xl font-bold">
+  <a href="/" class="text-xl font-bold">
     <span class="text-red-500 dark:text-blue-500 mr-1">by</span>  
     difaananda.
-  </p>
+  </a>
 
   <ul class="flex flex-row space-x-8 text-lg">
     <li class={path === '/' ? currentPath : ''}>
