--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from 'components/common/Header.astro';
+import { ViewTransitions } from 'astro:transitions';
 
 export interface Props {
 	title?: string;
@@ -25,31 +26,14 @@ const { title } = Astro.props;
 		<!-- 3rd party js -->
 		<script src="https://unpkg.com/@dotlottie/player-component@1.0.0/dist/dotlottie-player.js"></script>
 
-		<!-- Google tag (gtag.js) -->
-		<script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-6RLXF519CB"></script>
-		<script type="text/partytown">
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
 
-			gtag('config', 'G-6RLXF519CB');
-		</script>
-
-		<!-- Theme -->
-		<script is:inline>
-			;(function initTheme() {
-				const theme = localStorage.getItem('theme') || 'light'
-				if (theme === 'dark') {
-					document.documentElement.classList.add('dark')
-				}
-			})()
-		</script>
+		<ViewTransitions />
 	</head>
 	<body class="bg-lime-50 text-black
 							 dark:bg-[#03001C] dark:text-white
 	">
 		<!-- Custom Cursor -->
-		<div id="cursor"></div>
+		<div id="cursor" transition:persist></div>
 
 		<Header />
 		<main class="w-full md:w-3/4 mx-auto">
@@ -99,6 +83,19 @@ const { title } = Astro.props;
 		@apply dark:from-indigo-500 dark:via-purple-500 dark:to-pink-500;
 	}
 </style>
+
+<!-- Theme -->
+<script is:inline>
+	function initTheme() {
+		const theme = localStorage.getItem('theme') || 'light'
+		if (theme === 'dark') {
+			document.documentElement.classList.add('dark')
+		}
+	}
+
+	initTheme();
+	document.addEventListener('astro:after-swap', initTheme);
+</script>
 
 <script>
 	import gsap from 'gsap'
