--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,9 +1,12 @@
 ---
+import Gallery from 'components/Gallery.astro';
+import { decorateTitle } from 'helpers';
 const { frontmatter } = Astro.props;
 ---
-<div class="flex flex-col gap-20">
-  <h1 class="font-bold text-5xl">{frontmatter.title}</h1>
-  <article class="prose lg:prose-xl dark:prose-invert">
+<div class="flex flex-col gap-14">
+  <h1 class="font-bold text-3xl sm:text-5xl text-center sm:text-left leading-snug sm:leading-snug">{decorateTitle(frontmatter.title)}</h1>
+  <Gallery data={frontmatter.cover} />
+  <article class="prose lg:prose-xl dark:prose-invert mx-auto">
     <slot />
   </article>
 </div>
