feat: add gsap to window

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -99,6 +99,7 @@ const { title } = Astro.props;
 
 <script>
 	import gsap from 'gsap'
+	window.gsap = gsap;
 	
 	function hasTouchSupport() {
 		return 'ontouchstart' in window || navigator.maxTouchPoints > 0;
