fix: layout padding & sizing

--- a/src/components/common/Header.astro
+++ b/src/components/common/Header.astro
@@ -5,9 +5,7 @@
                               dark:from-blue-400 dark:to-blue-600`;
 ---
 
-<header class="mx-auto flex flex-col p-8 space-y-4 items-center
-               md:w-3/4 md:flex-row md:py-10 md:space-y-0 md:justify-between"
->
+<header class="mx-auto flex flex-col p-8 space-y-4 items-center w-full max-w-7xl md:w-3/4 md:flex-row md:py-10 md:space-y-0 md:justify-between">
   <!-- Bulb -->
   <div transition:persist id="bulb" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64 flex -top-5 -left-10 lg:left-0 sm:top-0">
     <object id="bulb-off" data="/images/bulb-off.svg" type="image/svg+xml" class="absolute w-36 sm:w-44 sm:h-44 md:w-64 h-36 md:h-64" style="opacity: 0;"></object>
