--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,8 +36,8 @@ const { title } = Astro.props;
 		<div id="cursor" transition:persist></div>
 
 		<Header />
-		<main class="w-full md:w-3/4 mx-auto">
-			<div class="p-10 rounded-lg">
+		<main class="w-full md:w-3/4 max-w-7xl mx-auto">
+			<div class="p-4 md:p-10">
 				<slot />
 			</div>
 		</main>
