--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,18 +1,36 @@
 ---
-import Gallery from 'components/Gallery.astro';
-import Button from 'components/common/Button.astro';
-import { decorateTitle } from 'helpers';
+import Gallery from "components/Gallery.astro";
+import Button from "components/common/Button.astro";
+import { decorateTitle } from "helpers";
+
+export interface Props {
+    frontmatter: any;
+}
+
 const { frontmatter } = Astro.props;
 
 const title = decorateTitle(frontmatter.title);
 ---
+
 <div class="flex flex-col gap-14">
-  <h1 class="font-bold text-3xl sm:text-5xl text-center sm:text-left leading-snug sm:leading-snug">{title}</h1>
-  <Gallery images={frontmatter.images} link={frontmatter.link} />
-  {frontmatter.link ? (
-      <Button classes="mt-5 mb-10 mx-auto" href={frontmatter.link} newTab={true}>Open preview in new tab</Button>
-  ) : null}
-  <article class="prose lg:prose-xl dark:prose-invert mx-auto">
-    <slot />
-  </article>
+    <h1
+        class="font-bold text-3xl sm:text-5xl text-center sm:text-left leading-snug sm:leading-snug"
+    >
+        {title}
+    </h1>
+    <Gallery images={frontmatter.images} link={frontmatter.link} />
+    {
+        frontmatter.link ? (
+            <Button
+                classes="mt-5 mb-10 mx-auto"
+                href={frontmatter.link}
+                newTab={true}
+            >
+                Open preview in new tab
+            </Button>
+        ) : null
+    }
+    <article class="prose lg:prose-xl dark:prose-invert mx-auto">
+        <slot />
+    </article>
 </div>
