--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Jumbotron from "components/Jumbotron.astro";
 import Featured from "components/Featured.astro";
 import CatchMe from "components/CatchMe.astro";
 import Footer from "components/Footer.astro";
+import { generateKeywords } from "config/seo";
 
 import { getCollection } from "astro:content";
 
@@ -16,7 +17,17 @@ const projects = projectsWithImageFull
     .slice(0, 3);
 ---
 
-<Layout>
+<Layout
+    description="Full Stack Developer and Designer passionate about creating beautiful, functional web experiences. Explore my portfolio of modern web applications and creative projects."
+    keywords={generateKeywords([
+        "Portfolio",
+        "Web Applications",
+        "Creative Projects",
+        "Modern Web",
+        "Professional Portfolio",
+    ])}
+    type="website"
+>
     <Jumbotron />
     <Featured projects={projects} />
     <CatchMe />
